--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,10 @@
 <h1 class="text-3xl font-bold underline text-blue-700 bg-amber-500">Hello world!</h1>
+<nav class="flex gap-4 p-4 bg-gray-100">
+  <a routerLink="/dashboard" class="text-blue-600">Dashboard</a>
+  <a routerLink="/inventory">Inventory</a>
+  <a routerLink="/receive">Receive</a>
+  <a routerLink="/pick">Pick</a>
+  <a routerLink="/import">Import</a>
+</nav>
+
+<router-outlet></router-outlet>
