--- a/src/app/pages/receive/receive.html
+++ b/src/app/pages/receive/receive.html
@@ -22,7 +22,7 @@
       <label class="block font-semibold">Quantity Received</label>
       <input
         type="number"
-        [(ngModel)]="quantity"
+        [(ngModel)]="qty"
         name="quantity"
         class="border px-2 py-1 w-full"
         required
@@ -67,7 +67,7 @@
     <tbody>
       <tr *ngFor="let item of receivedItems" class="hover:bg-gray-50">
         <td class="px-4 py-2">{{ item.productId }}</td>
-        <td class="px-4 py-2">{{ item.quantity }}</td>
+        <td class="px-4 py-2">{{ item.qty }}</td>
         <td class="px-4 py-2">{{ item.locationId }}</td>
         <td class="px-4 py-2">{{ item.timestamp | date : 'short' }}</td>
       </tr>
