--- a/src/app/pages/receive/receive.html
+++ b/src/app/pages/receive/receive.html
@@ -47,7 +47,9 @@
       </select>
     </div>
 
-    <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Receive Goods</button>
+    <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded" [disabled]="!isValid()">
+      Receive Goods
+    </button>
   </form>
 </div>
 
